--- a/Arachinator/Packages/manifest.json
+++ b/Arachinator/Packages/manifest.json
@@ -5,12 +5,14 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.12",
     "com.unity.ide.vscode": "1.2.4",
+    "com.unity.inputsystem": "1.0.2",
     "com.unity.recorder": "2.5.7",
     "com.unity.render-pipelines.universal": "10.6.0",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.toolchain.linux-x86_64": "0.1.19-preview",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.21-preview",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "10.6.0",
     "com.unity.modules.ai": "1.0.0",
