--- a/Arachinator/Packages/manifest.json
+++ b/Arachinator/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.animation.rigging": "1.0.3",
     "com.unity.collab-proxy": "1.13.5",
+    "com.unity.device-simulator": "3.0.3-preview",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.12",
     "com.unity.ide.vscode": "1.2.4",
